Merge Refactor_Service_Layer feature
-Update Service to recieve and send DTO
-Refactor AlertsService
-Refactor instanciation of PersonInfoDto into PersonInfoDtoFactory